fix dark mode

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 
 /* Dark Theme Styles */
 body.dark {
-  background-color: #333;  /* Dark background */
+  background-color: #151515;  /* Dark background */
   color: #f0f0f0;          /* Light text on dark background */
 }
 
